--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
 <head>
 
   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-K63NLKH');</script>
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-K63NLKH');
+  </script>
   <!-- End Google Tag Manager -->
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -23,24 +34,29 @@
   <!-- CSS Style Sheet -->
   <link rel="stylesheet" href="gofoodpro.css">
   <!-- Google Fonts-->
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,400;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,400;1,900&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <!-- Font Awesome-->
   <script src="https://kit.fontawesome.com/3d9ffe25b9.js" crossorigin="anonymous"></script>
   <title>Go Food Pro</title>
   <link rel="canonical" href="https://www.gofoodpro.com/">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="description" content="Tienda online en Costa Rica de snacks nutritivos, deliciosos y con ingredientes reales. Productos 100% costarricenses.">
-<meta name="keywords" content="go food pro, tienda online costa rica, snacks nutritivos, snacks costa rica, gluten free, keto">
-<meta property="og:title" content="GO FOOD PRO | Ingenio en Alimentos">
-<meta property="og:url" content="https://www.gofoodpro.com/">
-<meta property="og:image" content="https://www.gofoodpro.com/los-mejores-snacks-costarica.jpg">
-<meta property="og:description" content="Ingenio en snacks nutritivos, deliciosos y con ingredientes reales• Sin preservantes • Somos gluten friendly • 100% costarricense">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="description"
+    content="Tienda online en Costa Rica de snacks nutritivos, deliciosos y con ingredientes reales. Productos 100% costarricenses.">
+  <meta name="keywords"
+    content="go food pro, tienda online costa rica, snacks nutritivos, snacks costa rica, gluten free, keto">
+  <meta property="og:title" content="GO FOOD PRO | Ingenio en Alimentos">
+  <meta property="og:url" content="https://www.gofoodpro.com/">
+  <meta property="og:image" content="https://www.gofoodpro.com/los-mejores-snacks-costarica.jpg">
+  <meta property="og:description"
+    content="Ingenio en snacks nutritivos, deliciosos y con ingredientes reales• Sin preservantes • Somos gluten friendly • 100% costarricense">
 </head>
+
 <body>
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K63NLKH"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K63NLKH" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <script
     src="https://www.paypal.com/sdk/js?client-id=AaiFssyERp2W4G29opHIfXPJJOn2ezuz4XWicggBlFGI6Fb50ERE3Lbt8WOUVmg-EhnxZkLGb6N_Zddq">
@@ -63,22 +79,22 @@
               </div>
               <div class="table-responsive">
                 <table class="table">
-                    <thead>
-                        <tr>
-                          <th scope="col">Imagen</th>
-                          <th scope="col">Nombre</th>
-                          <th scope="col">Cantidad</th>
-                          <th scope="col">Eliminar</th>
-                        </tr>
-                      </thead>
-                      <tbody id="td-products">
-                        <tr>
-                          <th scope="row">1</th>
-                          <td>Mark</td>
-                          <td>Otto</td>
-                          <td>@mdo</td>
-                        </tr>
-                      </tbody>
+                  <thead>
+                    <tr>
+                      <th scope="col">Imagen</th>
+                      <th scope="col">Nombre</th>
+                      <th scope="col">Cantidad</th>
+                      <th scope="col">Eliminar</th>
+                    </tr>
+                  </thead>
+                  <tbody id="td-products">
+                    <tr>
+                      <th scope="row">1</th>
+                      <td>Mark</td>
+                      <td>Otto</td>
+                      <td>@mdo</td>
+                    </tr>
+                  </tbody>
                 </table>
               </div>
             </div>
@@ -105,39 +121,39 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="row">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav d-flex justify-content-center">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Tienda <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Productos
-            </a>
-            <div id="categories-menu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            </div>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="nuestra-historia">Nuestra Historia</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="preguntas-frecuentes">Preguntas Frecuentes</a>
-          </li>
-          <li id="cart-web" class="cart">
-            <a href="#" data-toggle="modal" data-target="#exampleModal">
-              <i class="fas fa-shopping-cart"></i>
-            </a><span id='numberCart' class="numbercartmb">0</span>
-          </li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav d-flex justify-content-center">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Tienda <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Productos
+              </a>
+              <div id="categories-menu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              </div>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="nuestra-historia">Nuestra Historia</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="preguntas-frecuentes">Preguntas Frecuentes</a>
+            </li>
+            <li id="cart-web" class="cart">
+              <a href="#" data-toggle="modal" data-target="#exampleModal">
+                <i class="fas fa-shopping-cart"></i>
+              </a><span id='numberCart' class="numbercartmb">0</span>
+            </li>
+          </ul>
+        </div>
+        <li id="cart-mobile" class="cart">
+          <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <i class="fas fa-shopping-cart"></i>
+          </a><span id='numberCartMobile' class="numbercartmb">0</span>
+        </li>
       </div>
-      <li id="cart-mobile" class="cart">
-        <a href="#" data-toggle="modal" data-target="#exampleModal">
-          <i class="fas fa-shopping-cart"></i>
-        </a><span id='numberCartMobile' class="numbercartmb">0</span>
-      </li>
     </div>
-  </div>
   </nav>
   <!-- END Nav BAR -->
   <!-- Start  Jumbotron -->
@@ -164,7 +180,8 @@
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <!-- <img src="gfpimg/icon.png" class="carouselicon" alt=""> -->
           <h1 id="display-img-h1" class="display-4 "> Crunch Bars</h1>
-          <p class="lead">Crocante sensación del arroz tostado e ingredientes naturales que aportan fibra, grasas saludables y energía.</p>
+          <p class="lead">Crocante sensación del arroz tostado e ingredientes naturales que aportan fibra, grasas
+            saludables y energía.</p>
           <hr class="my-4" id="lane-separator">
           <p class="carouselp"><b>¡Excelente y balanceada opción para tu merienda!</b></p>
           <a class="btn btn-success btn-lg" href="#crunchbars" role="button">Comprar</a>
@@ -176,7 +193,8 @@
         <img src="gfpimg\mobile-donas-1.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption-2 carousel-caption d-sm-block text-right my-4">
           <h1 class="display-4 mb-4">Donas de Camote</h1>
-          <p class="lead">Una innegable combinación del chocolate oscuro y la cremosa mantequilla de maní unidos a la suave textura del camote.</p>
+          <p class="lead">Una innegable combinación del chocolate oscuro y la cremosa mantequilla de maní unidos a la
+            suave textura del camote.</p>
           <hr class="my-4" id="lane-separator">
           <p class="carouselp"><b>¡Un brownie saludable!</b></p>
           <a class="btn btn-success btn-lg" href="#donas" role="button">Comprar</a>
@@ -188,7 +206,8 @@
         <img src="gfpimg\mobile-galletas-1.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <h1 id="display-img-h1" class="display-4 display-img-h1">Galletas de Almendra</h1>
-          <p class="lead">La perfecta unión entre crema de almendra tostada y nibs de cacao 100% orgánicos en una galleta que es suavecita por dentro y crocante por fuera.</p>
+          <p class="lead">La perfecta unión entre crema de almendra tostada y nibs de cacao 100% orgánicos en una
+            galleta que es suavecita por dentro y crocante por fuera.</p>
           <hr class="my-4" id="lane-separator">
           <p class="carouselp"><b>¡Un snack delicioso libre de harinas refinadas!</b></p>
           <a class="btn btn-success btn-lg" href="#galletasdealmendra" role="button">Comprar</a>
@@ -207,23 +226,23 @@
   <!-- End Carrousel -->
   <!-- Start Content -->
   <section class="content">
-  <div class="container">
-    <ul class="nav nav-tabs nav-fill justify-content-center">
-      <li class="nav-item">
-        <a class="nav-link active" href="#mantequillas">Mantequillas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#snacks">Snacks</a>
-      </li>
-    </ul>
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i>
-    </button>
-    <div class="row">
-      <div id='products' class="col-12 mt-5">
+    <div class="container">
+      <ul class="nav nav-tabs nav-fill justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" href="#mantequillas">Mantequillas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#snacks">Snacks</a>
+        </li>
+      </ul>
+      <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i>
+      </button>
+      <div class="row">
+        <div id='products' class="col-12 mt-5">
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
   <!-- End Content -->
   <!-- <div class="container-fluid">
     <div class="row justify-content-center">
@@ -244,26 +263,30 @@
   </div>
   </div>
 </div> -->
-    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-    <div class="elfsight-app-f14e22be-94f5-4e7f-90b0-93561b4aacc2"></div>
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  <div class="elfsight-app-f14e22be-94f5-4e7f-90b0-93561b4aacc2"></div>
   <!-- Start Footer -->
   <nav class="navbar navbar-dark bg-##000000 sticky-bottom footer">
     <a class="navbar-brand" href="#">Contáctenos</a>
-      <div class="w-100">
+    <div class="w-100">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavFooter"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon">
-      </span>
+        </span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavFooter">
         <div class="navbar-nav footer">
           <div itemscope itemtype="https://gofoodpro.com">
-          <a class="nav-item nav-link active" itemprop="telephone" href="tel:+50688906767"><i class="fa fa-phone-alt"></i>  +506 8827-3627</a>
-        </div>
-        <a class="nav-item nav-link active" href="mailto: info@gofoodpro.com"> <i class="fa fa-envelope"></i>  info@gofoodpro.com</a>
-          <a class="nav-item nav-link active"> <i class="fa fa-briefcase"></i>  San Jose, Costa Rica</a>
-          <a class="nav-item nav-link active" href="https://www.facebook.com/GoFoodPr0/"><i class="fa fa-facebook"> @GoFoodPro</i></a>
-          <a class="nav-item nav-link active" href="https://www.instagram.com/gofoodpro/"><i class="fa fa-instagram"> @GoFoodPro</i></a>
+            <a class="nav-item nav-link active" itemprop="telephone" href="tel:+50688906767"><i
+                class="fa fa-phone-alt"></i> +506 8827-3627</a>
+          </div>
+          <a class="nav-item nav-link active" href="mailto: info@gofoodpro.com"> <i class="fa fa-envelope"></i>
+            info@gofoodpro.com</a>
+          <a class="nav-item nav-link active"> <i class="fa fa-briefcase"></i> San Jose, Costa Rica</a>
+          <a class="nav-item nav-link active" href="https://www.facebook.com/GoFoodPr0/"><i class="fa fa-facebook">
+              @GoFoodPro</i></a>
+          <a class="nav-item nav-link active" href="https://www.instagram.com/gofoodpro/"><i class="fa fa-instagram">
+              @GoFoodPro</i></a>
         </div>
       </div>
       <!-- <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Jvtj1OngwOvemQYykW3kgkspgUprcvgQTngpJIi1IXixINyG3LLpLk88UQbm"></script></span> -->
@@ -283,7 +306,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
-  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js">
+  </script>
   <!-- custom scripts -->
   <script type="text/javascript" src="list.js"></script>
   <script type="text/javascript" src="gdp.js"></script>
