--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
   </div>
   </div>
 </div> -->
-  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-  <div class="elfsight-app-f14e22be-94f5-4e7f-90b0-93561b4aacc2"></div>
+  <!-- <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  <div class="elfsight-app-f14e22be-94f5-4e7f-90b0-93561b4aacc2"></div> -->
   <!-- Start Footer -->
   <nav class="navbar navbar-dark bg-##000000 sticky-bottom footer">
     <a class="navbar-brand" href="#">Contáctenos</a>
