--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
             </li>
           </ul>
         </div>
+          
+      
         <li id="cart-mobile" class="cart">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
             <i class="fas fa-shopping-cart"></i>
@@ -154,6 +156,7 @@
         </li>
       </div>
     </div>
+    <img class="headerpic another-headerpic" src="gfpimg/LOGO PYME-1.png" width="100" height="100" class="d-inline-block align-top" alt="">
   </nav>
   <!-- END Nav BAR -->
   <!-- Start  Jumbotron -->
