--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </li>
       </div>
     </div>
-    <img class="headerpic another-headerpic" src="gfpimg/LOGO PYME-1.png" width="100" height="100" class="d-inline-block align-top" alt="">
+    <img class="headerpic another-headerpic" src="gfpimg\LOGO-PYME-1.png" width="66" height="100" class="d-inline-block align-top" alt="">
   </nav>
   <!-- END Nav BAR -->
   <!-- Start  Jumbotron -->
