--- a/index.html
+++ b/index.html
@@ -230,12 +230,15 @@
   <!-- Start Content -->
   <section class="content">
     <div class="container">
-      <ul class="nav nav-tabs nav-fill justify-content-center">
+      <ul class="nav nav-tabs nav-fill justify-content-center tabs1">
         <li class="nav-item">
           <a class="nav-link active" href="#mantequillas">Mantequillas</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#snacks">Snacks</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#kombuchas">Kombuchas</a>
         </li>
       </ul>
       <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i>
