--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -34,7 +34,7 @@
 <meta name="keywords" content="go food pro, tienda online costa rica, snacks nutritivos, snacks costa rica, gluten free, keto">
 <meta property="og:title" content="GO FOOD PRO | Ingenio en Alimentos">
 <meta property="og:url" content="https://www.gofoodpro.com/">
-<meta property="og:image" content="https://www.gofoodpro.com/los-mejores-snacks-costarica.jpg">
+<meta property="og:image" content="https://www.gofoodpro.com/los-mejores-snacks-costarica-min.jpg">
 <meta property="og:description" content="Ingenio en snacks nutritivos, deliciosos y con ingredientes reales• Sin preservantes • Somos gluten friendly • 100% costarricense">
 </head>
 
@@ -218,7 +218,7 @@
   <!-- End Content -->
   <section class="container-fluid">
     <div class="row  justify-content-center pb-0">
-  <div class="col-lg-5 justify-content-center p-0"><img src="gfpimg/aboutus.jpg" class="img-fluid" alt=""></div>
+  <div class="col-lg-5 justify-content-center p-0"><img src="gfpimg/aboutus-min.jpg" class="img-fluid" alt=""></div>
   <div class="col-lg-5 text-center justify-content-center p-3 pnuestra">
     <img src="gfpimg/icon.png" class="jumboiconp" alt="">
     <p class="p-history">Go Food Pro nació a través de mi experiencia personal con la alimentación y mi vida laboral. Como ingeniera en alimentos, es un reto conservar un alimento sin tener que sacrificar su verdadera calidad. Personalmente siempre me ha gustado la hora del café y nunca encontraba ´´mi merienda ideal´´ alimentos que no tuvieran preservantes o azúcar añadida, por esta razón comencé a buscar materias primas nacionales que fueran de calidad y con las que las personas se relacionaran ya que, como buenos ticos, somos muy tradicionalistas y nos gusta lo conocido.</p>
@@ -227,7 +227,7 @@
 </div>
     </div>
     <div class="row justify-content-center pb-0">
-      <div class="col-lg-5 justify-content-center p-0 order-1 order-lg-2"><img class="img-fluid" src="gfpimg/about-us2.jpg" alt=""></div>
+      <div class="col-lg-5 justify-content-center p-0 order-1 order-lg-2"><img class="img-fluid" src="gfpimg/about-us2-min.jpg" alt=""></div>
       <div class="col-lg-5 text-center justify-content-center order-2 order-lg-1 p-3 pnuestra">
         <img src="gfpimg/icon.png" class="jumboiconp" alt="">
         <p class="p-history">Comencé a generar recetas tradicionales, pero con un valor agregado, haciéndolas deliciosas, pero utilizando ingredientes reales. Entre ellos muffins de banano con zanahoria sin azúcar (consumido, por diabéticos), donas de camote y chocolate al 70% que a los deportistas y a los niños les encantan, pan de semillas mixtas con fibra para ayudar al sistema digestivo, galletas con endulzantes de bajo en índice glicémico y con cacao 100% para dar satisfacción sin tener picos de azúcar en sangre, mantequilla de maní con sabor a leche condensada, pero SIN azúcar y SIN lácteos ¡Una verdadera maravilla!</p>
@@ -235,7 +235,7 @@
       </div>
     </div>
     <div class="row  justify-content-center pb-0">
-      <div class="col-lg-5 mb-md-4 justify-content-center p-0 order-1"><img class="img-fluid" src="gfpimg/about-us8.jpg" alt=""></div>
+      <div class="col-lg-5 mb-md-4 justify-content-center p-0 order-1"><img class="img-fluid" src="gfpimg/about-us8-min.jpg" alt=""></div>
       <div class="col-lg-5 mb-4 text-center justify-content-center order-2  p-3 pnuestra">
         <img src="gfpimg/icon.png" class="jumboiconp" alt="">
         <p class="p-history">Nuestros productos van dirigidos a todo tipo de consumidores, desde personas con alguna necesidad o condición alimentaria como alérgicos al huevo o a los lácteos, diabéticos que no pueden encontrar productos sin azúcar para ellos en el supermercado, madres que están en periodo de lactancia y no pueden consumir ciertos alimentos, niños que quieran meriendas con ingredientes reales y sin preservantes hasta trabajadores de oficina que quieran algún alimento para consumir en su jornada laboral que le de energía y no le cause molestias en el estómago y lo haga sentir bien para seguir con su trabajo.</p>
