--- a/carrito.html
+++ b/carrito.html
@@ -85,6 +85,12 @@
                 <ul class="navbar-nav center">
                     <li class="nav-item active">
                         <a class="nav-link" href="http://www.gofoodpro.com/">Tienda<span class="sr-only">(current)</span></a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="nuestra-historia">Nuestra Historia</a>
+                          </li>
+                          <li class="nav-item active">
+                            <a class="nav-link" href="preguntas-frecuentes">Preguntas Frecuentes</a>
+                          </li>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
