--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                       <th scope="col">Imagen</th>
                       <th scope="col">Nombre</th>
                       <th scope="col">Cantidad</th>
+                      <th scope="col">Precio</th>
                       <th scope="col">Eliminar</th>
                     </tr>
                   </thead>
