--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     <tr>
                       <th scope="col">Imagen</th>
                       <th scope="col">Nombre</th>
+                      <th scope="col">Unidades</th>
                       <th scope="col">Cantidad</th>
                       <th scope="col">Precio</th>
                       <th scope="col">Eliminar</th>
