--- a/carrito.html
+++ b/carrito.html
@@ -144,6 +144,12 @@
             </div>
             <div class="container">
             <div class="row formdelivery">
+                <div class="col-3">
+                    <button onclick="bankFunction()" class="btn btn-primary">Datos bancarios</button>
+                    <div id="banco">
+
+                    </div>
+                </div>
                 <div>
                 <form>
                     <p>Seleccione si requiere envío</p>
