--- a/carrito.html
+++ b/carrito.html
@@ -144,9 +144,9 @@
             </div>
             <div class="container">
             <div class="row formdelivery">
-                <div class="col-3">
+                <div class="col-3 mr-auto">
                     <button onclick="bankFunction()" class="btn btn-primary">Datos bancarios</button>
-                    <div id="banco">
+                    <div id="banco" class="mt-3 ">
 
                     </div>
                 </div>
