--- a/carrito.html
+++ b/carrito.html
@@ -163,17 +163,24 @@
                 <form id="form-delivery">
 
                 </form>
+                <div class="row">
+                    <div id='total-cart' class="col-12"></div></div>
+                    <div class="div-buttons">
+                        <div id='button-comprar'><button id="button-comprar-2" class="btn btn-success">Comprar</button></div>
+                        <div id="whatsapp"></div>
+                        <div id="paypal-button-container"></div>
+                    </div>
+                </div>
             </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
             <div id='total-cart' class="col-12"></div></div>
             <div class="div-buttons">
                 <div id='button-comprar'><button id="button-comprar-2" class="btn btn-success">Comprar</button></div>
-                
                 <div id="whatsapp"></div>
                 <div id="paypal-button-container"></div>
             </div>
-        </div>
+        </div> -->
 
             <!-- <div id='products' class="col-12 mt-5">
                 
