--- a/carrito.html
+++ b/carrito.html
@@ -145,7 +145,7 @@
             <div class="container">
             <div class="row formdelivery">
                 <div class="col-3 mr-auto col-desktop">
-                    <button onclick="bankFunction()" class="btn btn-primary">Datos bancarios</button>
+                    <button onclick="bankFunction()" class="btn btn-primary">Transferencia Bancaria</button>
                     <div id="banco" class="mt-3 ">
 
                     </div>
