--- a/carrito.html
+++ b/carrito.html
@@ -169,7 +169,7 @@
                     <div class="div-buttons">
                         <div class="d-flex" id='button-comprar'>
                             <div class=" mr-3 col-mobile">
-                                <button onclick="bankFunction()" class="btn btn-primary">Datos bancarios</button>
+                                <button onclick="bankFunction()" class="btn btn-primary">Transferencia Bancaria</button>
                             </div>
                             <button id="button-comprar-2" class="btn btn-success">Comprar</button>
                         </div>
