--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <!-- Start Nav Bar -->
   <!-- Image and text -->
   <nav class="navbar navbar-light navbar-expand-md sticky-top header pb-1">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
       <img class="headerpic" src="gfpimg/icon-min.jpg" width="100" height="100" class="d-inline-block align-top" alt="">
     </a>
     <div class="w-100">
