--- a/carrito.html
+++ b/carrito.html
@@ -73,7 +73,7 @@
     <!-- Start Nav Bar -->
     <!-- Image and text -->
     <nav class="navbar navbar-light navbar-expand-md bg-#BBD646 sticky-top header">
-        <a class="navbar-brand" href="/index.html">
+        <a class="navbar-brand" href="/">
             <img class="headerpic" src="gfpimg/icon.png" width="80" height="80" class="d-inline-block align-top" alt="">
         </a>
         <div class="w-100">
