--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row">
               <div id="product-card" class="col-12">
               </div>
-              <div class="table-responsive">
+              <div class="table-responsive table-modal">
                 <table class="table">
                   <thead>
                     <tr>
