--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#snacks">Snacks</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="#kombuchas">Kombuchas</a>
-        </li>
+        </li> -->
       </ul>
       <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i>
       </button>
