--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active mb-3">
         <img src="gfpimg/bg-xl-gfp-5-min.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-1" alt="...">
-        <img src="gfpimg/bg-md-gfp-1-min.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
+        <img src="gfpimg\bg-md-gfp-2-min.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
         <img src="gfpimg/mobile-crunchbars-1-min.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <!-- <img src="gfpimg/icon.png" class="carouselicon" alt=""> -->
@@ -216,7 +216,7 @@
       </div>
       <div class="carousel-item mb-3">
         <img src="gfpimg\bg-xl-gfp-4-min.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-2" alt="...">
-        <img src="gfpimg\bg-md-gfp-2-min.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
+        <img src="gfpimg\bg-md-gfp-donas-min.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
         <img src="gfpimg\mobile-donas-1-min.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption-2 carousel-caption d-sm-block text-right my-4">
           <h1 class="display-4 mb-4">Donas de Camote</h1>
@@ -229,7 +229,7 @@
       </div>
       <div class="carousel-item mb-3">
         <img src="gfpimg\bg-xl-gfp-2-min.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-3" alt="...">
-        <img src="gfpimg\bg-md-gfp-3-min.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
+        <img src="gfpimg/bg-md-gfp-1-min.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
         <img src="gfpimg\mobile-galletas-1-min.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <h1 id="display-img-h1" class="display-4 display-img-h1">Galletas de Almendra</h1>
@@ -254,17 +254,17 @@
   <!-- Start Content -->
   <section class="content">
     <div class="container">
-      <ul class="nav nav-tabs nav-fill justify-content-center tabs1">
+      <!-- <ul class="nav nav-tabs nav-fill justify-content-center tabs1">
         <li class="nav-item">
           <a class="nav-link active" href="#mantequillas">Mantequillas</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#snacks">Snacks</a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="#kombuchas">Kombuchas</a>
-        </li> -->
-      </ul>
+        </li>
+      </ul> -->
       <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i>
       </button>
       <div class="row">
